lite-logger/logger-engine/objects/LogEntryEvent__e/LogEntryEvent__e.object-meta.xml
<CustomObject>
    <description>LiteLogger transport event. Published immediately so log entries survive transaction rollbacks.</description>
    <label>Log Entry Event</label>
    <pluralLabel>Log Entry Events</pluralLabel>
</CustomObject>