lite-logger/logger-engine/objects/LogEntryEvent__e/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <label>LoggingLevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>