lite-logger/logger-engine/objects/LogEntryEvent__e/fields/LoggingLevelOrdinal__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevelOrdinal__c</fullName>
    <label>LoggingLevelOrdinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>