lite-logger/logger-engine/objects/LogEntryEvent__e/fields/OriginType__c.field-meta.xml
<CustomField>
    <fullName>OriginType__c</fullName>
    <label>OriginType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>