lite-logger/logger-engine/objects/LogEntryEvent__e/fields/SkipDataMasking__c.field-meta.xml
<CustomField>
    <fullName>SkipDataMasking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Data Masking</label>
    <type>Checkbox</type>
</CustomField>