lite-logger/logger-engine/objects/LogEntryEvent__e/fields/SkipHotTierStorage__c.field-meta.xml
<CustomField>
    <fullName>SkipHotTierStorage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Hot Tier Storage</label>
    <type>Checkbox</type>
</CustomField>