lite-logger/logger-engine/objects/LogEntryEvent__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>